fix(auth): 修复微服务架构下 登录日志保存失败的问题